--- a/BankAccount.Api/appsettings.json
+++ b/BankAccount.Api/appsettings.json
@@ -1,9 +1,17 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Default": "Warning"
+    },
+    "ApplicationInsights": {
+      "LogLevel": {
+        "Default": "Information"
+      }
     }
   },
-  "AllowedHosts": "*"
-}
+
+    "ApplicationInsights": {
+      "InstrumentationKey": "07c1dca9-f194-4209-9a4c-d9d1c434233b"
+    },
+    "AllowedHosts": "*"
+  }
